:construction: issues of example11

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,7 @@ add_subdirectory(ch8_Attributes)
 add_subdirectory(ch9_Windows)
 add_subdirectory(ch10_Colors)
 add_subdirectory(ch11_Interfacing_with_the_key_board)
-
-
+add_subdirectory(ch12_Interfacing_with_the_mouse)
 
 
 
